fix: fixed the blue header bar on mobile

--- a/src/components/shared/sections/header.module.css
+++ b/src/components/shared/sections/header.module.css
@@ -56,6 +56,7 @@
 
   .blueBar {
     margin-top: 30px;
+    margin-right: 0;
   }
 
   .longBlueBar {
